# GKlib

./: .gitignore  CMakeLists.txt  GKlibSystem.cmake  LICENSE.txt  Makefile  README.md  blas.c  cache.c  csr.c  error.c  fs.c  getopt.c  gk_ms_inttypes.h  gk_ms_stdint.h  gk_util.c  graph.c  io.c  itemsets.c  memory.c  random.c  sort.c  string.c
scripts/: gexpand.pl
win32/: adapt.c  adapt.h
